<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="#92CAD9"
    android:layout_margin="5dp">

    <TextView
        android:id="@+id/textName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textStyle="bold"
        android:textColor="@color/material_dynamic_primary30"
        android:textSize="18sp"
        />

    <TextView
        android:id="@+id/textEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textStyle="italic"
        android:textSize="16sp"
        />

    <TextView
        android:id="@+id/textVaccinationStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vaccinated"
        android:textColor="#275764"
        android:textSize="16sp"

        />

    <TextView
        android:id="@+id/textNumberOfVaccinations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_of_vaccinations_taken"
        android:textSize="16sp"
        />

</LinearLayout>
