<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page_background1">

    <TextView
        android:id="@+id/signin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textSize="35sp"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:textColor="@color/material_dynamic_primary30"
        android:fontFamily="@font/lobster_two_italic"

        />
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/signin"
        android:layout_marginTop="100dp"
        android:hint="@string/username"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginHorizontal="20dp"
        android:drawableStart="@drawable/baseline_person_30"
        android:inputType="text"
        />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_marginTop="30dp"
        android:hint="@string/password"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_marginHorizontal="20dp"
        android:drawableStart="@drawable/baseline_security_24"

        />
    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:onClick="login"
        android:backgroundTint="@color/material_dynamic_primary20"
        />

    <TextView
        android:id="@+id/reg"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@+id/login"
        android:layout_marginTop="90dp"
        android:text="@string/new_user_register_here"
        android:gravity="center"
        android:textSize="15sp"
        android:onClick="reg"
        />
</RelativeLayout>