<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/page_background1"

    >

    <TextView
        android:id="@+id/txtsignup"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lobster_two_italic"
        android:gravity="center"
        android:padding="20dp"
        android:text="@string/sign_up"
        android:textColor="@color/material_dynamic_primary30"
        android:textSize="35sp"
         />
    <EditText
        android:id="@+id/firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtsignup"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="10dp"
        android:text="@string/first_name"
        android:textSize="17sp"
        />
    <EditText
        android:id="@+id/lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/firstname"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:text="@string/last_name"
        android:textSize="17sp"
        />
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/lastname"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:text="Username"
        android:textSize="17sp"
        />
    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_marginHorizontal="25dp"
        android:layout_marginTop="20dp"
        android:text="Username"
        android:textSize="17sp"
        />
    <EditText
        android:id="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_below="@id/password"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="25dp"
        android:text="Age"
        android:textSize="17sp"

        />
    <EditText
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:layout_below="@id/age"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="25dp"
        android:text="Email Address"
        android:textSize="17sp"

        />
    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:layout_below="@id/emailAddress"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="25dp"
        android:text="Phone Number"
        android:textSize="17sp"

        />
   <Button
       android:id="@+id/btnsignup"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@id/phone"
       android:backgroundTint="@color/material_dynamic_primary20"
       android:gravity="center"
       android:layout_marginHorizontal="80dp"
       android:layout_marginTop="30dp"
       android:text="Register"
       android:textSize="20sp"
       android:onClick="registered"
       />
    <TextView
        android:id="@+id/txtlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnsignup"
        android:layout_marginTop="15dp"
        android:layout_marginHorizontal="30dp"
        android:text="Already Registered? Login Here."
        android:gravity="center"
        android:onClick="login"
        />


</RelativeLayout>